--- a/site/sprint-aml-kyc.html
+++ b/site/sprint-aml-kyc.html
@@ -9,6 +9,21 @@
 
   <meta name="description" content="Sprint AML/KYC pour PME, fiduciaires et indépendants. Passez d’un diagnostic de conformité à un dispositif AML opérationnel, documenté et défendable en audit, en 30 à 90 jours." />
 
+  <!-- ✅ AJOUT : mots-clés SEO (inclut 'lab') -->
+  <meta name="keywords" content="
+  sprint AML KYC,
+  conformité AML KYC,
+  KYC fiduciaire,
+  AML fiduciaire,
+  dispositif AML opérationnel,
+  audit AML,
+  scoring risque client,
+  UBO PEP,
+  politique AML CFT,
+  Master Your Metrics,
+  lab
+  " />
+
   <link rel="canonical" href="https://masteryourmetrics.be/sprint-aml-kyc.html" />
 
   <style>
