Update client link in index.html

--- a/site/index.html
+++ b/site/index.html
@@ -562,11 +562,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div style="display:flex; gap:16px; justify-content:center; flex-wrap:wrap;">
   <a href="diagnostics/esg.html" class="cta-button">🚀 Commencer l'auto-évaluation</a>
 
-  <a href="espaceclient.html"
-     class="cta-button"
-     style="background:linear-gradient(135deg,#001f3f,#003a70);">
-     🔐 Espace client
-  </a>
+<a href="/client/"
+   class="cta-button"
+   style="background:linear-gradient(135deg,#001f3f,#003a70);">
+   🔐 Espace client
+</a>
 </div>
 <section id="modules">
   <h2>Nos 5 Modules Clés</h2>
