Update client space link to use HTTPS

--- a/site/index.html
+++ b/site/index.html
@@ -562,7 +562,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div style="display:flex; gap:16px; justify-content:center; flex-wrap:wrap;">
   <a href="diagnostics/esg.html" class="cta-button">🚀 Commencer l'auto-évaluation</a>
 
-<a href="http://192.168.68.117:3000/login"
+<a href="https://sprint-master.netlify.app">
    class="cta-button"
    style="background:linear-gradient(135deg,#001f3f,#003a70);">
    🔐 Espace client
